crates/am/tests/snapshots/snapshots__snapshot_init_fish_globals_and_inherited_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
alias ll "ls -lha"
alias cm "git commit -sm"
function cmf
    cm feat: $argv
end
alias gs "git status"
set -gx _AM_ALIASES "cm,cmf,gs,ll"

# am wrapper: reload aliases after mutations
function am --wraps=am
    command am $argv
    set -l am_status $status
    if test $am_status -ne 0
        return $am_status
    end
    # profile mutation → reload aliases
    if begin; test "$argv[1]" = profile; or test "$argv[1]" = p; end
        if begin; test "$argv[2]" = set; or test "$argv[2]" = s; or test "$argv[2]" = add; or test "$argv[2]" = a; or test "$argv[2]" = remove; or test "$argv[2]" = r; end
            command am reload fish | source
        end
    else if begin; test "$argv[1]" = add; or test "$argv[1]" = a; or test "$argv[1]" = remove; or test "$argv[1]" = r; end
        if contains -- -l $argv; or contains -- --local $argv
            # local alias change → reload project aliases
            command am hook fish | source
        else
            # profile/global alias change → reload
            command am reload fish | source
        end
    end
end

# am cd hook
function __am_hook --on-variable PWD
    am hook fish | source
end
__am_hook
