crates/am/tests/snapshots/snapshots__snapshot_init_fish_multi_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e cm
complete -e -c cm
function cm
    git commit -sm $argv
end
complete -c cm --wraps "git"
functions -e cmf
complete -e -c cmf
function cmf
    cm feat: $argv
end
complete -c cmf --wraps "cm"
functions -e gs
complete -e -c gs
function gs
    git status $argv
end
complete -c gs --wraps "git"
set -gx _AM_ALIASES "cm|bed528f,cmf|9c99949,gs|22db469"
# am wrapper: sync after mutations
function am --wraps=am
    command am $argv
    set -l am_status $status
    if test $am_status -ne 0
        return $am_status
    end
    switch "$argv[1]"
        case add a remove r trust tui t
            command am sync fish | source
        case use u untrust
            command am sync --quiet fish | source
        case var v
            switch "$argv[2]"
                case set unset
                    command am sync fish | source
            end
        case profile p
            switch "$argv[2]"
                case use u
                    command am sync --quiet fish | source
                case add a remove r
                    command am sync fish | source
            end
    end
end

# am cd hook
function __am_hook --on-variable PWD
    am sync fish | source
end
__am_hook

COMPLETE=fish am | source
