crates/am/tests/snapshots/snapshots__snapshot_init_fish_simple_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e gs
complete -e -c gs
function gs
    git status $argv
end
complete -c gs --wraps "git"
functions -e ll
complete -e -c ll
function ll
    ls -lha $argv
end
complete -c ll --wraps "ls"
set -gx _AM_ALIASES "gs|22db469,ll|619d266"
# am wrapper: sync after mutations
function am --wraps=am
    command am $argv
    set -l am_status $status
    if test $am_status -ne 0
        return $am_status
    end
    switch "$argv[1]"
        case add a remove r trust tui t
            command am sync fish | source
        case use u untrust
            command am sync --quiet fish | source
        case var v
            switch "$argv[2]"
                case set unset
                    command am sync fish | source
            end
        case profile p
            switch "$argv[2]"
                case use u
                    command am sync --quiet fish | source
                case add a remove r
                    command am sync fish | source
            end
    end
end

# am cd hook
function __am_hook --on-variable PWD
    am sync fish | source
end
__am_hook

COMPLETE=fish am | source
