crates/am/tests/snapshots/snapshots__snapshot_init_powershell_simple_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
function global:gs { git status @args }
function global:ll { ls -lha @args }
$env:_AM_ALIASES = "gs|22db469,ll|619d266"
# am wrapper: sync after mutations
function am {
    $amBin = (Get-Command -CommandType Application am | Select-Object -First 1).Source
    & $amBin @args
    if ($LASTEXITCODE -ne 0) { return }
    if ($args.Count -lt 1) { return }
    $first = $args[0]
    $second = if ($args.Count -ge 2) { $args[1] } else { $null }

    $runSync = {
        $out = (& $amBin sync powershell) -join "`r`n"
        if ($out) { Invoke-Command -ScriptBlock ([scriptblock]::Create($out)) -NoNewScope }
    }
    $runSyncQuiet = {
        $out = (& $amBin sync --quiet powershell) -join "`r`n"
        if ($out) { Invoke-Command -ScriptBlock ([scriptblock]::Create($out)) -NoNewScope }
    }

    if ($first -in 'add', 'a', 'remove', 'r', 'trust', 'tui', 't') {
        & $runSync
    } elseif ($first -in 'use', 'u', 'untrust') {
        & $runSyncQuiet
    } elseif ($first -in 'var', 'v') {
        if ($second -in 'set', 'unset') { & $runSync }
    } elseif ($first -in 'profile', 'p') {
        if ($second -in 'use', 'u') {
            & $runSyncQuiet
        } elseif ($second -in 'add', 'a', 'remove', 'r') {
            & $runSync
        }
    }
}

# am cd hook: sync project aliases on directory change
$env:__AM_LAST_DIR = $PWD.Path
$__am_original_prompt = $function:prompt
function global:prompt {
    if ($PWD.Path -ne $env:__AM_LAST_DIR) {
        $env:__AM_LAST_DIR = $PWD.Path
        $amBin = (Get-Command -CommandType Application am | Select-Object -First 1).Source
        $hookCode = (& $amBin sync powershell) -join "`r`n"
        if ($hookCode) { Invoke-Command -ScriptBlock ([scriptblock]::Create($hookCode)) -NoNewScope }
    }
    if ($__am_original_prompt) { & $__am_original_prompt } else { "PS $($PWD.Path)> " }
}

$env:COMPLETE = "powershell"; am | Out-String | Invoke-Expression; Remove-Item Env:\COMPLETE
