crates/am/tests/snapshots/snapshots__snapshot_init_zsh_simple_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
alias gs="git status"
alias ll="ls -lha"
export _AM_ALIASES="gs|22db469,ll|619d266"
am() {
  command am "$@"
  local am_status=$?
  if [[ $am_status -ne 0 ]]; then return $am_status; fi
  case "$1" in
    add|a|remove|r|trust|tui|t)
      eval "$(command am sync zsh)" ;;
    use|u|untrust)
      eval "$(command am sync --quiet zsh)" ;;
    var|v)
      case "$2" in
        set|unset) eval "$(command am sync zsh)" ;;
      esac ;;
    profile|p)
      case "$2" in
        use|u) eval "$(command am sync --quiet zsh)" ;;
        add|a|remove|r) eval "$(command am sync zsh)" ;;
      esac ;;
  esac
}

# am cd hook
__am_hook() { eval "$(am sync zsh)"; }
chpwd_functions+=(__am_hook)
__am_hook

source <(COMPLETE=zsh am)
