crates/am/tests/snapshots/snapshots__snapshot_listing_tampered_project.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
🌐 global
│
╰─📁 project (/path/to/project/.aliases)
       ⚠ modified since last trust — run 'am trust' to review and allow
