crates/am/tests/snapshots/snapshots__snapshot_listing_unknown_project.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
🌐 global
│
├─● rust (active: 1)
│   ╰─ ct → cargo test
│
╰─📁 project (/path/to/project/.aliases)
       ⚠ untrusted — run 'am trust' to review and allow
