crates/am/tests/snapshots/snapshots__snapshot_listing_untrusted_project.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
🌐 global
│
╰─📁 project (/path/to/project/.aliases)
       ⚠ blocked — run 'am untrust --forget' to reset
